feat: html content - header

--- a/opexa-website/index.html
+++ b/opexa-website/index.html
@@ -7,15 +7,24 @@
 </head>
 <body>
     <header>
-        
+        <h1>Welcome To OPEXA</h1>
+        <img src="./images/programming_students.jpg" alt="photo of students" srcset="">
     </header>
 
     <main>
-
+        <section>
+            <img src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
+            <div>
+                <!-- About Us heading a 3 sub-headings will be added here -->
+                <h2>About Us</h2>
+            </div>
+        </section>
+        <section></section>
+        <section></section>
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
 </html>
