feat: html content - sections

--- a/opexa-website/index.html
+++ b/opexa-website/index.html
@@ -15,12 +15,33 @@
         <section>
             <img src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
             <div>
-                <!-- About Us heading a 3 sub-headings will be added here -->
                 <h2>About Us</h2>
+                <ul>
+                    <li><a href="#">Who We Are</a></li>
+                    <li><a href="#">Core Competencies</a></li>
+                </ul>
             </div>
         </section>
-        <section></section>
-        <section></section>
+        <section>
+            <img src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
+            <div>
+                <h2>Our Services</h2>
+                <ul>
+                    <li><a href="#">ICT Consulting</a></li>
+                    <li><a href="#">ICT Training</a></li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <img src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
+            <div>
+                <h2>Contact Us</h2>
+                <ul>
+                    <li><a href="#">Email</a></li>
+                    <li><a href="#">WhatsApp</a></li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <footer>
