feat: add styling

--- a/opexa-website/index.html
+++ b/opexa-website/index.html
@@ -5,48 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OPEXA</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans">
 </head>
 <body>
-    <header>
-        <h1>Welcome To OPEXA</h1>
-        <img src="./images/programming_students.jpg" alt="photo of students" srcset="">
+    <header class="primary-header">
+        <h1 class="main-heading">Welcome To OPEXA</h1>
+        <img class="header-img" src="./images/programming_students.jpg" alt="photo of students" srcset="">
     </header>
 
     <main>
         <section>
-            <img src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
+            <img class="section-img" src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
             <div>
-                <h2>About Us</h2>
-                <ul>
-                    <li><a href="#">Who We Are</a></li>
-                    <li><a href="#">Core Competencies</a></li>
+                <h2 class="category-heading">About Us</h2>
+                <ul class="category-list">
+                    <li><a class="category-link" href="#">Who We Are</a></li>
+                    <li><a class="category-link" href="#">Core Competencies</a></li>
                 </ul>
             </div>
         </section>
         <section>
-            <img src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
+            <img class="section-img" src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
             <div>
-                <h2>Our Services</h2>
-                <ul>
-                    <li><a href="#">ICT Consulting</a></li>
-                    <li><a href="#">ICT Training</a></li>
+                <h2 class="category-heading">Our Services</h2>
+                <ul class="category-list">
+                    <li><a class="category-link" href="#">ICT Consulting</a></li>
+                    <li><a class="category-link" href="#">ICT Training</a></li>
                 </ul>
             </div>
         </section>
         <section>
-            <img src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
+            <img class="section-img" src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
             <div>
-                <h2>Contact Us</h2>
-                <ul>
-                    <li><a href="#">Email</a></li>
-                    <li><a href="#">WhatsApp</a></li>
+                <h2 class="category-heading">Contact Us</h2>
+                <ul class="category-list">
+                    <li><a class="category-link" href="#">Email</a></li>
+                    <li><a class="category-link" href="#">WhatsApp</a></li>
                 </ul>
             </div>
         </section>
     </main>
 
-    <footer>
-        <p>Created with enthusiasm by an OPEXA student.</p>
+    <footer class="primary-footer">
+        <p class="created-by">Created with enthusiasm by an OPEXA student.</p>
     </footer>
 </body>
 </html>
