feat: implement css layout

--- a/opexa-website/index.html
+++ b/opexa-website/index.html
@@ -14,33 +14,33 @@
     </header>
 
     <main>
-        <section>
-            <img class="section-img" src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
-            <div>
+        <section class="category-section">
+            <img class="category-img" src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
+            <div class="category-details">
                 <h2 class="category-heading">About Us</h2>
                 <ul class="category-list">
-                    <li><a class="category-link" href="#">Who We Are</a></li>
-                    <li><a class="category-link" href="#">Core Competencies</a></li>
+                    <li class="category-list-item"><a class="category-link" href="#">Who We Are</a></li>
+                    <li class="category-list-item"><a class="category-link" href="#">Core Competencies</a></li>
                 </ul>
             </div>
         </section>
-        <section>
-            <img class="section-img" src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
-            <div>
+        <section class="category-section">
+            <img class="category-img" src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
+            <div class="category-details">
                 <h2 class="category-heading">Our Services</h2>
                 <ul class="category-list">
-                    <li><a class="category-link" href="#">ICT Consulting</a></li>
-                    <li><a class="category-link" href="#">ICT Training</a></li>
+                    <li class="category-list-item"><a class="category-link" href="#">ICT Consulting</a></li>
+                    <li class="category-list-item"><a class="category-link" href="#">ICT Training</a></li>
                 </ul>
             </div>
         </section>
-        <section>
-            <img class="section-img" src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
-            <div>
+        <section class="category-section">
+            <img class="category-img" src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
+            <div class="category-details">
                 <h2 class="category-heading">Contact Us</h2>
                 <ul class="category-list">
-                    <li><a class="category-link" href="#">Email</a></li>
-                    <li><a class="category-link" href="#">WhatsApp</a></li>
+                    <li class="category-list-item"><a class="category-link" href="#">Email</a></li>
+                    <li class="category-list-item"><a class="category-link" href="#">WhatsApp</a></li>
                 </ul>
             </div>
         </section>
