--- a/opexa-website/index.html
+++ b/opexa-website/index.html
@@ -15,7 +15,7 @@
 
     <main>
         <section class="category-section">
-            <img class="category-img" src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
+            <img class="category-img" src="./images/about-us.jpg" alt="about us" srcset="">
             <div class="category-details">
                 <h2 class="category-heading">About Us</h2>
                 <ul class="category-list">
@@ -25,7 +25,7 @@
             </div>
         </section>
         <section class="category-section">
-            <img class="category-img" src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
+            <img class="category-img" src="./images/our-services.jpg" alt="our services" srcset="">
             <div class="category-details">
                 <h2 class="category-heading">Our Services</h2>
                 <ul class="category-list">
@@ -35,7 +35,7 @@
             </div>
         </section>
         <section class="category-section">
-            <img class="category-img" src="./images/bible_opened.jpg" alt="image of opened Bible" srcset="">
+            <img class="category-img" src="./images/contact-us.jpg" alt="contact us" srcset="">
             <div class="category-details">
                 <h2 class="category-heading">Contact Us</h2>
                 <ul class="category-list">
